# pptx-mcp

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  RUN.md  docker-compose.yml
engine/: pyproject.toml
engine-service/: Dockerfile  app.py  requirements.txt
engine/src/pptx_mcp/: __init__.py  assembler.py  autodetect.py  bytesio.py  catalog.py  cli.py  composer.py  fileserver.py  filler.py  fit.py  guardrails.py  manifest.py  mcp_server.py  models.py  move.py  preview.py  render.py  schema.py  shapes.py  storage.py  tablefit.py  template.py  textfit.py  validate.py
engine/tests/: conftest.py  test_assembler.py  test_autodetect.py  test_autodetect_real.py  test_bytesio.py  test_catalog.py  test_cli.py  test_composer.py  test_fileserver.py  test_filler.py  test_fit.py  test_guardrails.py  test_image_fit.py  test_image_ingest.py  test_manifest.py  test_mcp_server.py  test_models.py  test_move.py  test_preview.py  test_render.py  test_schema.py  test_shapes.py  test_storage.py  test_tablefit.py  test_template.py  test_text_format.py  test_textfit.py  test_validate.py  test_validate_composition.py
engine/tests/fixtures/: real_deck_labels.json
mcp-server/: Dockerfile  README.md  requirements.txt  server.py
scripts/: e2e-smoke.sh
template example/: Black and white template.pptx
tests/: conftest.py  test_assembler.py  test_fixture.py  test_manifest.py  test_render.py  test_validate.py
web/: .gitignore  Dockerfile  e2e-flow.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tailwind.config.ts  vitest.config.ts
(+149 files in other folders)
